--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ input {
 input:hover {
     box-shadow: 0 0 0 1px hsl(221, 94%, 66%);
 }
+
 input:focus {
     outline: none;
     border: 2px solid hsl(278, 94%, 30%);
@@ -60,3 +61,27 @@ form button {
     opacity: 0;
 }
 
+/* class for shacke keyframe  */
+.animate-shake {
+    animation: shake 0.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
+#check-mark {
+
+    /* add position absolute and center it in the parent div , then add form_animation key frame */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: fade-in 0.5s 1s forwards ease-in;
+    opacity: 0;
+
+}
+
+#successMessage{
+    animation: fade-in 0.5s forwards ease-in;
+    opacity: 0;
+}
