--- a/styles/main.css
+++ b/styles/main.css
@@ -2070,11 +2070,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.\!text-red-700 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(185 28 28 / var(--tw-text-opacity)) !important;
-}
-
 .text-red-700 {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
@@ -2491,8 +2486,8 @@ video {
     width: 100%;
   }
 
-  .md\:w-1\/4 {
-    width: 25%;
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
   .md\:w-\[450px\] {
@@ -2501,6 +2496,14 @@ video {
 
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:\!w-1\/2 {
+    width: 50% !important;
+  }
+
+  .md\:\!w-1\/3 {
+    width: 33.333333% !important;
   }
 
   .md\:translate-y-\[25\%\] {
